# pixi-singularity-kit

./: .gitignore  README.md  install.sh  pixi-container-build  pixi-container.def
.agent/wiki/: index.md  overview.md
.agent/wiki/flows/: build-flow.md  runtime-flow.md
.agent/wiki/modules/: build-cli.md  runtime-scripts.md  test-fixtures.md
.github/workflows/: smoke-tests.yml
src/: pixi-container-base.def  pixi-container-build.py  pixi-container-env.def  pixi-container.def  run_pixi_container.sh  validate_pixi_container.sh
test/: run-smoke-tests.sh
test/experiment/: experiment_support.py  pixi.toml  run_experiment.py
test/experiment/support_pkg/: pyproject.toml
test/experiment/support_pkg/src/experiment_support/: __init__.py
test/package/: print_message.py  pyproject.toml
test/package/src/kit_package_demo/: __init__.py  message.py
