[project]
name = "kit-package-demo"
version = "0.1.0"
requires-python = ">=3.11"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
name = "kit-package-demo"
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "<3.15"

[tool.pixi.pypi-dependencies]
kit-package-demo = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
pip = "*"

[tool.pixi.environments]
default = ["dev"]
format = { features = ["dev"], no-default-feature = true }
